Fix studio comment issues on narrow screens

--- a/src/views/preview/comment/comment.scss
+++ b/src/views/preview/comment/comment.scss
@@ -75,6 +75,7 @@
 .comment {
     position: relative;
     width: 100%;
+    flex-direction: row;
     flex-wrap: nowrap;
     justify-content: space-between;
     align-items: flex-start;
@@ -100,6 +101,7 @@
     .comment-top-row {
         margin-bottom: 8px;
         width: 100%;
+        flex-direction: row;
 
         .username {
             margin-right: auto;
@@ -239,6 +241,7 @@
         .comment-bottom-row {
             padding-top: 1rem;
             font-size: .75rem;
+            flex-direction: row;
             justify-content: space-between;
 
             .comment-time {
